Fixed all the issues regarding the previous task