@@ -12,7 +12,6 @@ import java.util.Date;
 import java.util.Objects;
 
 public class ToDoServiceImplementation implements ToDoService {
-    private static Long nextId = 1L;
     private final ToDoDao toDoDao;
 
     public ToDoServiceImplementation() {
@@ -20,18 +19,12 @@ public class ToDoServiceImplementation implements ToDoService {
     }
 
     @Override
-    public void create(String title, String description, String dueDate, String priority) throws ParseException {
-        if(Objects.equals(title, "") || title.trim().isEmpty() ||
-           Objects.equals(description, "") || description.trim().isEmpty() ||
-           Objects.equals(dueDate, "") || dueDate.trim().isEmpty()){
-            throw new InvalidInputException("Invalid input");
+    public void create(ToDo toDo) throws InvalidInputException {
+        if (toDo.getTitle() == null || toDo.getTitle().isBlank() ||
+            toDo.getDescription() == null || toDo.getDescription().isBlank() ||
+            toDo.getDate() == null) {
+            throw new InvalidInputException("Invalid input: title, description, and due date cannot be empty.");
         }
-        Date dueDateNew = null;
-        SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd");
-        dueDateNew = dateFormat.parse(dueDate);
-        Integer integer;
-        integer = Integer.parseInt(priority);
-        ToDo toDo = new ToDo(nextId++, title, description, dueDateNew, integer);
         toDoDao.create(toDo);
     }
     @Override
@@ -44,17 +37,12 @@ public class ToDoServiceImplementation implements ToDoService {
         toDoDao.delete(ID);
     }
     @Override
-    public void update(Long iD,String title, String description, String dueDate, String priority) throws EntityNotFoundException, ParseException{
-        if(Objects.equals(title, "") || title.trim().isEmpty() ||
-           Objects.equals(description, "") || description.trim().isEmpty() ||
-           Objects.equals(dueDate, "") || dueDate.trim().isEmpty()){
-            throw new InvalidInputException("Invalid input");
+    public void update(ToDo toDo) throws EntityNotFoundException, InvalidInputException{
+        if (toDo.getTitle() == null || toDo.getTitle().isBlank() ||
+            toDo.getDescription() == null || toDo.getDescription().isBlank() ||
+            toDo.getDate() == null) {
+            throw new InvalidInputException("Invalid input: title, description, and due date cannot be empty.");
         }
-        Date dueDateNew = null;
-        SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd");
-        dueDateNew = dateFormat.parse(dueDate);
-        Integer integer= Integer.parseInt(priority);
-        ToDo toDo = new ToDo(iD, title, description, dueDateNew, integer);
         toDoDao.update(toDo);
     }
     @Override
